--- a/scss/Layout/_menus.scss
+++ b/scss/Layout/_menus.scss
@@ -106,7 +106,7 @@
 
     /*Redimensionnement de menu plat pour rogner au déclenchement de la coche*/
     &:hover .menu_plat{
-        width: 70%;
+        width: 67%;
         h3 ,p{
         white-space: nowrap;
         overflow: hidden;
@@ -120,7 +120,18 @@
     
 
     /*Mise en forme des plats et prix avec 3. lorsque la taille du conteneur est trop petit pour le contenu*/
-     .menu_prix{
+    .menu_plat{
+        width: 80%;
+        h3 ,p{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+    }
+} 
+    
+    
+    .menu_prix{
         font-weight: bold;
         display: flex;
         align-items: flex-end;
@@ -181,7 +192,7 @@
 
   
 
-@media (min-width: 770px){
+@media (min-width: 1100px){
 
     .nom_restaurant{
         justify-content: space-around;
