--- a/scss/utils/_loader.scss
+++ b/scss/utils/_loader.scss
@@ -9,7 +9,7 @@
     background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
     position: fixed;
     z-index: 200;
-    animation: apparition 0.2s 3s ease-in-out normal forwards;
+    animation: apparition 0.2s 3s ease-in-out forwards;
 }
 
 
