--- a/scss/Layout/_menus.scss
+++ b/scss/Layout/_menus.scss
@@ -162,6 +162,7 @@
     height: 60px;
     width: 180px;
     margin: 50px auto 50px auto;
+    cursor: pointer;
     background-image: linear-gradient(to bottom, $couleur_secondaire, $couleur_primaire) ;
     color: $couleur_blanche;
     border: none;
