--- a/scss/Pages/_reservation.scss
+++ b/scss/Pages/_reservation.scss
@@ -24,6 +24,7 @@
     height: 40px;
     width: 180px;
     margin: auto;
+    cursor: pointer;
     background-image: linear-gradient(to bottom, $couleur_secondaire, $couleur_primaire) ;
     color: $couleur_blanche;
     border: none;
