--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -6,10 +6,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
-
+main, header, footer {
+  max-width: 1500px;
+  margin: auto;
+}
 body{
   cursor: pointer;
+  
 }
 a:link 
 { 
